Alle alternatieve modellen gescheiden in aparte Notebooks

--- a/ExpBigru.ipynb
+++ b/ExpBigru.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from torch import optim\n",
@@ -24,7 +24,9 @@
     "import torch\n",
     "from models.BiGRU import BiGRU\n",
     "from torch import nn\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ],
    "metadata": {
     "collapsed": false,
@@ -44,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "dataset = DatasetLoader(\"eventlog/phone_usage_cleaned.csv\", seq_length=10, max_apps=200)\n",
@@ -87,8 +89,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 33627/33627 [05:01<00:00, 111.67it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss: 10.681\n",
+      "Accuracy of the network is:71.1125\n",
+      "loss: 11.427\n",
+      "Accuracy of the network is:64.325\n",
+      "loss: 11.692\n",
+      "Accuracy of the network is:64.4625\n",
+      "loss: 11.526\n",
+      "Accuracy of the network is:63.4625\n",
+      "loss: 9.788\n",
+      "Accuracy of the network is:75.4\n",
+      "loss: 10.694\n",
+      "Accuracy of the network is:73.675\n",
+      "loss: 10.246\n",
+      "Accuracy of the network is:72.7625\n",
+      "loss: 10.649\n",
+      "Accuracy of the network is:74.725\n",
+      "loss: 9.870\n",
+      "Accuracy of the network is:77.95\n",
+      "loss: 11.660\n",
+      "Accuracy of the network is:73.4375\n",
+      "loss: 10.995\n",
+      "Accuracy of the network is:75.5125\n",
+      "loss: 12.050\n",
+      "Accuracy of the network is:70.7625\n",
+      "loss: 12.536\n",
+      "Accuracy of the network is:64.8\n",
+      "loss: 10.766\n",
+      "Accuracy of the network is:73.6875\n",
+      "loss: 9.580\n",
+      "Accuracy of the network is:78.0625\n",
+      "loss: 10.400\n",
+      "Accuracy of the network is:74.0625\n"
+     ]
+    }
+   ],
    "source": [
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "bigru = BiGRU(max_apps=200,\n",
@@ -96,9 +144,11 @@
     "              n_gru=64)\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(bigru.parameters(), lr=0.0015)\n",
+    "# bigru.src_embedding.weight = torch.nn.Parameter(torch.zeros(size=(200, 4)))\n",
     "bigru.to(device=device)\n",
     "\n",
     "running_loss = 0.0\n",
+    "running_accuracy_list = []\n",
     "i = 0\n",
     "total = 0\n",
     "correct = 0\n",
@@ -125,9 +175,35 @@
     "              (running_loss / 2000))\n",
     "        running_loss = 0.0\n",
     "        print('Accuracy of the network is:' + str(100 * correct / total))\n",
+    "        running_accuracy_list.append(100 * correct / total)\n",
     "        total = 0\n",
     "        correct = 0\n",
-    "    i += 1\n"
+    "    i += 1"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 3. Running accuracy opslaan"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [],
+   "source": [
+    "AccuracyComparison = pd.read_csv(\"outputdata/accuracycomparison.csv\", index_col=False)\n",
+    "AccuracyComparison[\"Embeddings\"] = running_accuracy_list\n",
+    "AccuracyComparison.to_csv(\"outputdata/accuracycomparison.csv\", index=False)\n"
    ],
    "metadata": {
     "collapsed": false,
