Analyse voor verschillende datasets

--- a/Analysis.ipynb
+++ b/Analysis.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -29,20 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
-      "text/plain": "     MFU    MRU  onehotbigru  onehotlstm128  onehotlstm64  onehotgru64  \\\n0   True   True         True           True          True         True   \n1  False  False        False          False         False        False   \n2  False   True        False          False         False        False   \n3  False   True        False          False         False        False   \n4  False   True        False          False         False        False   \n\n   onehotgru128  embeddingsbigru  embeddingsinheritancebigru  \n0          True             True                        True  \n1         False            False                       False  \n2         False            False                       False  \n3         False            False                       False  \n4         False            False                       False  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MFU</th>\n      <th>MRU</th>\n      <th>onehotbigru</th>\n      <th>onehotlstm128</th>\n      <th>onehotlstm64</th>\n      <th>onehotgru64</th>\n      <th>onehotgru128</th>\n      <th>embeddingsbigru</th>\n      <th>embeddingsinheritancebigru</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n      <td>False</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   onehotlstm64  onehotlstm128  onehotgru64  onehotgru128  onehotbigru    MFU  \\\n0          True           True         True          True         True   True   \n1          True           True         True          True         True   True   \n2          True           True         True          True         True  False   \n3          True           True         True          True         True  False   \n4         False          False         True          True        False   True   \n\n     MRU  embeddingsbigru  embeddingsinheritancebigru  \n0  False             True                        True  \n1  False             True                        True  \n2   True             True                        True  \n3  False             True                        True  \n4  False            False                        True  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>onehotlstm64</th>\n      <th>onehotlstm128</th>\n      <th>onehotgru64</th>\n      <th>onehotgru128</th>\n      <th>onehotbigru</th>\n      <th>MFU</th>\n      <th>MRU</th>\n      <th>embeddingsbigru</th>\n      <th>embeddingsinheritancebigru</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>True</td>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = pd.read_csv(filepath_or_buffer=\"outputdata/accuracycomparison.csv\")\n",
+    "dataset = pd.read_csv(filepath_or_buffer=\"outputdata/accuracycomparison3.csv\")\n",
     "dataset.head()"
    ],
    "metadata": {
@@ -54,41 +54,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True     0.634151\n",
-      "False    0.365849\n",
+      "False    0.585378\n",
+      "True     0.414622\n",
       "Name: MFU, dtype: float64\n",
-      "True     0.745417\n",
-      "False    0.254583\n",
+      "False    0.673764\n",
+      "True     0.326236\n",
       "Name: MRU, dtype: float64\n",
       "\n",
-      "True     0.728189\n",
-      "False    0.271811\n",
+      "True     0.514716\n",
+      "False    0.485284\n",
       "Name: onehotlstm64, dtype: float64\n",
-      "True     0.733089\n",
-      "False    0.266911\n",
+      "True     0.520845\n",
+      "False    0.479155\n",
       "Name: onehotlstm128, dtype: float64\n",
       "\n",
-      "True     0.753224\n",
-      "False    0.246776\n",
+      "True     0.524959\n",
+      "False    0.475041\n",
       "Name: onehotgru64, dtype: float64\n",
-      "True     0.766152\n",
-      "False    0.233848\n",
+      "True     0.528872\n",
+      "False    0.471128\n",
       "Name: onehotgru128, dtype: float64\n",
       "\n",
-      "True     0.760747\n",
-      "False    0.239253\n",
+      "True     0.526772\n",
+      "False    0.473228\n",
       "Name: onehotbigru, dtype: float64\n",
-      "True     0.720982\n",
-      "False    0.279018\n",
+      "True     0.513019\n",
+      "False    0.486981\n",
       "Name: embeddingsbigru, dtype: float64\n",
-      "True     0.720793\n",
-      "False    0.279207\n",
+      "True     0.510171\n",
+      "False    0.489829\n",
       "Name: embeddingsinheritancebigru, dtype: float64\n"
      ]
     }
