Extra experimenten uitgevoerd voor het optimaliseren van hyperparameters.

--- a/MFU.ipynb
+++ b/MFU.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "from torch import optim\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "\"\"\" batch size 16 voor pre-trainen \"\"\"\n",
@@ -189,15 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[115  29 237 192 159 185  22 198 177  90   8  67   7  13  35  32   3   4\n",
-      "   1 192  36   3  54  14   2  16   1   2  32  12   7   1   4   4   1  16\n",
-      "   1   2  12   7   2   1   1   1   2   0   0   0   0   0   0   0   0   0\n",
+      "[ 84   2 144   1 181   5  13  26 448   1   6 367  35   4  16  66  43   2\n",
+      "  35   6  44 119   1   9   7  20   1   8   4   2  41   3  28   4   4  12\n",
+      "   1  35  19  15   2   2   2   2  16   1   6   4   2   1   2   3   1  10\n",
+      "   1  20  18  30   3   2   1   5   4   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
@@ -205,9 +206,7 @@
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
       "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-      "   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0   0\n",
-      "   0   0]\n",
-      "nultoken is voor padding\n"
+      "   0   0]\n"
      ]
     }
    ],
@@ -223,8 +222,7 @@
     "    if nr_opened_apps==2000:\n",
     "        break\n",
     "\n",
-    "print(appcount)\n",
-    "print(\"nultoken is voor padding\")"
+    "print(appcount)"
    ],
    "metadata": {
     "collapsed": false,
@@ -247,8 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "outputs": [],
+   "execution_count": 9,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "62.63317153123621\n",
+      "31726\n"
+     ]
+    }
+   ],
    "source": [
     "nr_opened_apps = 0\n",
     "running_accuracy_list = []\n",
@@ -260,7 +267,10 @@
     "        mostfreq = appcount.argsort()[-5:][::-1]\n",
     "        running_accuracy_list.append(next_app_index.item() in mostfreq)\n",
     "\n",
-    "        appcount[next_app_index.item()] += 1"
+    "        appcount[next_app_index.item()] += 1\n",
+    "\n",
+    "print(sum(running_accuracy_list)/len(running_accuracy_list)*100)\n",
+    "print(len(running_accuracy_list))"
    ],
    "metadata": {
     "collapsed": false,
@@ -280,14 +290,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
-      "text/plain": "   onehotlstm64  onehotlstm128  onehotgru64  onehotgru128  onehotbigru    MFU\n0          True           True         True          True         True   True\n1          True           True         True          True         True   True\n2          True           True         True          True         True  False\n3          True           True         True          True         True  False\n4         False          False         True          True        False   True",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>onehotlstm64</th>\n      <th>onehotlstm128</th>\n      <th>onehotgru64</th>\n      <th>onehotgru128</th>\n      <th>onehotbigru</th>\n      <th>MFU</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>False</td>\n      <td>False</td>\n      <td>True</td>\n      <td>True</td>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "     MRU   MFU\n0   True  True\n1   True  True\n2   True  True\n3  False  True\n4   True  True",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>MRU</th>\n      <th>MFU</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>False</td>\n      <td>True</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>True</td>\n      <td>True</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
